--- a/index.html
+++ b/index.html
@@ -3,15 +3,60 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+      form{
+        font-style: italic;
+        height: 335px;
+        width: 50%;
+        top: 200px;
+        left: 30px;
+        position: absolute;
+        margin-left: 25%;
+        margin-bottom:5%;
+        padding: 2%;
+        background-color: rgb(218, 218, 218);
+        border-radius: 3%;
 
+      }
+      a{
 
+        background-color: rgb(3, 80, 54);
+        width: 100%;
+        height: 300px;
+      }
+    </style>
+  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Hello world222</title>
+    <title>Hello world221</title>
   </head>
   <body>
-    <h1>Hello world1111</h1>
-    <h2>Hello world1111</h2>
+    <nav class="navbar navbar-light bg-light">
+      <div class="container-fluid">
+        <a  class="navbar-brand" href="#" style="color: rgb(255, 255, 255); font-style: italic; font-size: xx-large; font;"  >
+          fun talking
+        </a>
+      </div>
+    </nav>
+    <form>
+
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+      </div>
+      <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1">
+      </div>
+      
+      <div class="mb-3 form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+      </div>
+      <button type="submit" class="btn btn-primary">log in</button>
+    </form>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
