--- a/register.html
+++ b/register.html
@@ -3,32 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-      form{
-        font-style: italic;
-        height: 410px;
-        width: 50%;
-        top: 200px;
-        left: 30px;
-        position: absolute;
-        margin-left: 25%;
-        margin-bottom:5%;
-        padding: 2%;
-        background-color: rgb(218, 218, 218);
-        border-radius: 3%;
-
-      }
-      a{
-
-        background-color: rgb(3, 80, 54);
-        width: 100%;
-        height: 300px;
-      }
-    </style>
-  
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="register.css" rel="stylesheet">
 
-    <title>Hello world221</title>
+    <title>fun talking</title>
   </head>
   <body>
     <nav class="navbar navbar-light bg-light">
@@ -42,27 +21,31 @@
 
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
         <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
       </div>
       
       <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="Display Name" class="form-control" id="exampleInputPassword1">
+        <input type="password" class="form-control" id="password">
       </div>
       <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Display Name</label>
-        <input type="Name" class="form-control" id="exampleInputPassword1">
+        <label for="exampleInputPassword1" class="form-label">Password validation</label>
+        <input type="password" class="form-control" id="validation">
       </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+      <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Nickname</label>
+        <input type="Name" class="form-control" id="nickname">
       </div>
-      <button type="submit" class="btn btn-primary">register</button>
+      <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Add image</label>
+        <input type="file" accept="image/*" id="image">
+      </div>
+      <button type="submit" onclick="register()" class="btn btn-primary">register</button>
     </form>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+    <script src="register.js"></script>
   </body>
 </html>
