--- a/login.html
+++ b/login.html
@@ -9,27 +9,27 @@
 
     <title>fun talking</title>
   </head>
-  <body>
+  <body style="background-image: url('fun talking.jpg');">
     <nav class="navbar navbar-light bg-light">
       <div class="container-fluid">
-        <a  class="navbar-brand" href="#" style="color: rgb(255, 255, 255); font-style: italic; font-size: xx-large; font;"  >
+        <b  class="navbar-brand" href="#" style="color: rgb(255, 255, 255); font-style: italic; font-size: xx-large;"  >
           fun talking
-        </a>
+        </b>
       </div>
     </nav>
     <form>
 
       <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <label for="exampleInputEmail1" style="font-size: larger;" class="form-label">Email address</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        <div id="emailHelp" style="color: black;" class="form-text">We'll never share your email with anyone else.</div>
       </div>
       <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
+        <label for="exampleInputPassword1" style="font-size: larger;" class="form-label">Password</label>
         <input type="password" class="form-control" id="exampleInputPassword1">
       </div>
      
-      <button type="submit" id="clickLogin" class="btn btn-primary">log in</button>
+      <button type="submit" id="clickLogin" style="font-size: larger;" class="btn btn-primary">log in</button>
     </form>
 
 
