--- a/login.html
+++ b/login.html
@@ -20,16 +20,18 @@
     <form>
 
       <div class="mb-3">
-        <label for="exampleInputEmail1" style="font-size: larger;" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <div id="emailHelp" style="color: black;" class="form-text">We'll never share your email with anyone else.</div>
+        <label for="exampleInputPassword1" style="font-size: larger;" class="form-label">Nickname</label>
+        <input type="Name" class="form-control" id="nickname">
       </div>
       <div class="mb-3">
         <label for="exampleInputPassword1" style="font-size: larger;" class="form-label">Password</label>
         <input type="password" class="form-control" id="exampleInputPassword1">
+        <div class="col">
+          <button type="submit" style="margin-top: 15px;" id="login" class="btn btn-primary mb-3">login</button>
+        </div>
+        <label for="exampleInputPassword1" class="form-label">not registered?</label>
+        <a href="register.html" class="link-primary">click here</a>
       </div>
-     
-      <button type="submit" id="clickLogin" style="font-size: larger;" class="btn btn-primary">log in</button>
     </form>
 
 
