--- a/register.html
+++ b/register.html
@@ -45,7 +45,7 @@
       </div>
 
         <label for="exampleInputPassword1" class="form-label">already registered?</label>
-        <a class="link-primary">click here</a>
+        <a href="login.html" class="link-primary">click here</a>
       </div>
     </form>
 
