--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
       </div>
       <div class="mb-3">
         <label for="exampleInputPassword1" style="font-size: larger;" class="form-label">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
+        <input type="password" class="form-control" id="password">
         <div class="col">
           <button type="submit" style="margin-top: 15px;" id="login" class="btn btn-primary mb-3">login</button>
         </div>
@@ -36,6 +36,6 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    
+    <script src="login.js"></script>
   </body>
 </html>
