--- a/chat.html
+++ b/chat.html
@@ -37,12 +37,19 @@
                         </div>
                     </li>
                     <li class="clearfix">
+                        <img id = "image" alt="avatar">
+                        <div class="about">
+                            <div id = name class="name"></div>
+                            <div id = "last massage" class="status"> <i class="fa fa-circle online"></i></div>
+                        </div>
+                    </li>  
+                    <li class="clearfix">
                         <img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="avatar">
                         <div class="about">
                             <div class="name">Mike Thomas</div>
                             <div class="status"> <i class="fa fa-circle online"></i> online </div>
                         </div>
-                    </li>                                    
+                    </li>                                  
                     <li class="clearfix">
                         <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="avatar">
                         <div class="about">
@@ -93,7 +100,7 @@
                                 <span class="message-data-time">10:10 AM, Today</span>
                                 <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="avatar">
                             </div>
-                            <div class="message other-message float-right"> Hi Aiden, how are you? How is the project coming along? </div>
+                            <div class="message other-message float-right" id = "output" > </div>
                         </li>
                         <li class="clearfix">
                             <div class="message-data">
@@ -122,4 +129,6 @@
     </div>
 </div>
 </div>
+<script src="chat.js"></script>
+
 </body>
